--- a/TrackYourWalk/Info.plist
+++ b/TrackYourWalk/Info.plist
@@ -20,6 +20,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSHealthShareUsageDescription</key>
+	<string></string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string></string>
+	<key>NSHomeKitUsageDescription</key>
+	<string></string>
+	<key>NSMotionUsageDescription</key>
+	<string>Yes</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
